@@ -2035,7 +2035,8 @@ Only the default event loop is capable of handling signals, and therefore
 you can only register child watchers in the default event loop.
 
 Due to some design glitches inside libev, child watchers will always be
-handled at maximum priority (their priority is set to EV_MAXPRI by libev)
+handled at maximum priority (their priority is set to C<EV_MAXPRI> by
+libev)
 
 =head3 Process Interaction
 
